--- a/index.html
+++ b/index.html
@@ -5,13 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script  type="module" src= 'https://cdn.jsdelivr.net/npm/lit@2.0.0/lit.min.js' defer></script>
     <script  type="module" src="component/search.js" ></script>
+    <script  type="module" src="component/title.js" ></script>
+
     <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
 
     <title>search</title>
+    <link rel="stylesheet" href="index.css"/>
+
 </head>
 <body>
-    <search-component></search-component>
+    <div class="title">
+         <search-title></search-title>
+    </div>
+    
+    <br> 
+    
 
 
+
+    <div class="wrapper">
+        <search-component></search-component>
+    </div>
 </body>
 </html>
