fetch api and implemnt some logic

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script  type="module" src= 'https://cdn.jsdelivr.net/npm/lit@2.0.0/lit.min.js' defer></script>
-    <script  type="module" src="component/search.js" ></script>
+    <script  type="module" src="component/search-component.js" ></script>
     <script  type="module" src="component/title.js" ></script>
 
     <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
@@ -24,7 +24,17 @@
 
 
     <div class="wrapper">
-        <search-component></search-component>
+        <search-product></search-product>
     </div>
+<!-- 
+    <div class="product-cards" data-product-cards-container>
+
+    </div>
+    <template data-product-template>
+      <div class="card">
+        <div class="header" data-header></div>
+        <div class="body" data-body></div>
+      </div>
+    </template> -->
 </body>
 </html>
