--- a/index.html
+++ b/index.html
@@ -6,18 +6,29 @@
     <script  type="module" src= 'https://cdn.jsdelivr.net/npm/lit@2.0.0/lit.min.js' defer></script>
     <script  type="module" src="component/search-component.js" ></script>
     <script  type="module" src="component/title.js" ></script>
+    <script  type="module" src="component/app-header.js" ></script>
+    <script  type="module" src="component/app-footer.js" ></script>
+
+
     <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
     <title>search</title>
     <link rel="stylesheet" href="index.css"/>
 
 </head>
 <body>
+    
+    <div class="header">
+        <app-header></app-header>
+    </div>
     <div class="title">
          <search-title></search-title>
     </div>
     <br> 
     <div class="wrapper">
         <search-product></search-product>
+    </div>
+    <div class="footer">
+        <app-footer></app-footer>
     </div>
 
 </body>
