--- a/my-project/src/index.html
+++ b/my-project/src/index.html
@@ -8,9 +8,11 @@
   <script src="/my-project/dist/react-app.bundle.js" defer></script>
   <link rel="stylesheet" href="/my-project/src/react-app/styles.css">  
 
+   
+
 </head>
 <body>
   <div id="root"></div>
-  <!-- <search-product></search-product> -->
+  <search-product></search-product> <!-- Lit component -->
 </body>
 </html>
