--- a/my-project/src/index.html
+++ b/my-project/src/index.html
@@ -6,26 +6,14 @@
   <title>React ,Angular and Lit Integration</title>
   <script type="module" src="/my-project/dist/lit-app.bundle.js"></script>
   <script src="/my-project/dist/react-app.bundle.js" defer></script>
-  <link rel="stylesheet" href="/my-project/src/react-app/styles.css">  
-
+  <script src="/my-project/dist/angular-app.bundle.js" defer></script>
 </head>
 <body>
   <div id="root"></div>
-  <search-product></search-product> <!-- Lit component -->
-
-  <div class="container-fluid">
-    <div class="row">
-      <!-- Categories Column -->
-      <div class="col-md-3">
-        <app-categ></app-categ>
-      </div>
+  <app-header></app-header>
   
-      <!-- Products Column -->
-      <div class="col-md-9">
-        <app-product></app-product>
-      </div>
-    </div>
-  </div>
+  <search-product></search-product> <!-- Lit component -->
+  <app-product></app-product>
+
 
 </body>
-</html>
