--- a/my-project/src/index.html
+++ b/my-project/src/index.html
@@ -7,12 +7,9 @@
   <script type="module" src="/my-project/dist/lit-app.bundle.js"></script>
   <script src="/my-project/dist/react-app.bundle.js" defer></script>
   <link rel="stylesheet" href="/my-project/src/react-app/styles.css">  
-
-   
-
 </head>
 <body>
-  <div id="root"></div>
+  <div id="root"></div> <!-- React Root -->
   <search-product></search-product> <!-- Lit component -->
 </body>
 </html>
